--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=PocketViewer
 application.vendor=Jocopa3
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -37,7 +38,9 @@ file.reference.lwjgl_util.jar=C:\\Program Files (x86)\\Java\\lwjgl-2.9.1\\jar\\l
 file.reference.lwjgl_util_applet.jar=C:\\Program Files (x86)\\Java\\lwjgl-2.9.1\\jar\\lwjgl_util_applet.jar
 file.reference.lzma.jar=C:\\Program Files (x86)\\Java\\lwjgl-2.9.1\\jar\\lzma.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.AppleJavaExtensions.jar}:\
     ${file.reference.asm-debug-all.jar}:\
@@ -71,7 +74,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=pocketviewer.PocketViewer
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
